
*** mu4e

    - Include maildir-shortcuts in the main-view with overall/unread counts,
      similar to bookmarks, and with the same ~:hide~ and ~:hide-unread~ properties.
      Note that for the latter, you see to update your maildir-shortcuts to the
      new format, as explained in the ~mu4e-maildir-shortcuts~ docstring.

    - Add some more properties for use in capturing org-mode links to messages /
      queries. See [[info:mu4e#Org-mode links][the mu4e manual]] for details.

    - Honor ~truncate-string-ellipsis~ so you can now use 'fancy' ellipses for
      truncated strings with ~(setq truncate-string-ellipsis "…")~


* 1.4 (released, as of April 18 2020)

*** mu

    - mu now defaults to the [[https://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html][XDG Base Directory Specification]] for the default
      locations for various files. E.g. on Unix the mu database now lives under
      ~~/.cache/mu/~ rather than ~~/.mu~. You can still use the old location by
      passing ~--muhome=~/.mu~ to various ~mu~ commands, or setting ~(setq
      mu4e-mu-home "~/.mu")~ for ~mu4e~.

      If your ~~/.cache~ is volatile (e.g., is cleared on reboot), you may want
      use ~--muhome~. Some mailing-list dicussion suggest that's fairly rare
      though.

      After upgrading, you may wish to delete the files in the old location to
      recover some diskspace.

    - There's a new subcommand ~mu init~ to initialize the mu database, which
      takes the ~--maildir~ and ~--my-address~ parameters that ~index~ used to take.
      These parameters are persistent so ~index~ does not need (or accept) them
      anymore. ~mu4e~ now depends on those parameters.

      ~init~ only needs to be run once or when changing these parameters. That
      implies that you need to re-index after changing these parameters. The
      ~.noupdate~ files are ignored when indexing the first time after ~mu init~ (or
      in general, when the database is empty).
