@@ -18,6 +18,9 @@
       Note that for the latter, you see to update your maildir-shortcuts to the
       new format, as explained in the ~mu4e-maildir-shortcuts~ docstring.
 
+      You can set ~mu4e-main-hide-fully-read~ to hide any bookmarks/maildirs that
+      have no unread messages.
+
     - Add some more properties for use in capturing org-mode links to messages /
       queries. See [[info:mu4e#Org-mode links][the mu4e manual]] for details.
 
